--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 
     <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-desktop mdl-cell--4-col-tablet  mdl-cell--12-col-phone">
       <div class="mdl-card__title" {% if post.image %} style="background: url('{{ post.image }}') center/cover;" {% endif %}>
-        <h2 class="mdl-card__title-text" style="background-color: rgba(203, 240, 17, 0.3);" >{{ post.title }}</h2>
+        <h2 class="mdl-card__title-text" style="background-color: rgba(203, 240, 17, 0.3);" onmouseover="white(this)" onmouseout="normal(this)">{{ post.title }}</h2>
       </div>
       <div class="mdl-card__supporting-text">
         {{ post.excerpt }}
